--- a/src/index.html
+++ b/src/index.html
@@ -23,43 +23,7 @@
 		<toaster-container></toaster-container>
 
 		<!-- Navigation -->
-		<nav class="navbar navbar-color navbar-static-top" role="navigation">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-					<span class="sr-only">{{'Toggle navigation'|translate}}</span>
-					<span class="fa fa-bars"></span>
-				</button>
-				<a class="navbar-brand" ui-sref="home">
-					<h2>Dugout</h2>
-					<img src="images/logo.png" />
-				</a>
-			</div>
-			<ul class="nav navbar-nav pull-right">
-				<li>
-					<a file-choose href="#" ng-model="configurationFilePath" title="{{'Open projects configuration file'|translate}}">
-						<i class="fa fa-folder-o fa-2x"></i>
-					</a>
-				</li>
-				<li>
-					<a ui-sref="configuration" title="{{'Configuration'|translate}}">
-						<i class="fa fa-gear fa-2x"></i>
-						<small ng-if="!$root.globalConfMgr.valid" class="label label-danger pull-right">{{'invalid'|translate}}</small>
-					</a>
-				</li>
-			</ul>
-			<div class="buttons nav">
-				<button class="btn btn-circle btn-sm btn-danger" ng-click="ctrl.closeApp()" title="{{'Close'|translate}}">
-					<i class="fa fa-times"></i>
-				</button>
-				<button class="btn btn-circle btn-sm btn-warning" ng-click="ctrl.minimizeApp()" title="{{'Minimize'|translate}}">
-					<i class="fa fa-minus"></i>
-				</button>
-				<button class="btn btn-circle btn-sm btn-success" ng-click="ctrl.maximizeApp()" title="{{'Maximize'|translate}}">
-					<i class="fa fa-unsorted"></i>
-				</button>
-			</div>
-			<div ui-view="sidebar"></div>
-		</nav>
+		<div ui-view="navbar"></div>
 		<!-- /Navigation -->
 
         <div id="page-wrapper">
